maven using java 1.7

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,32 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>nebulae-converter</name>
 	<description>nebulae-converter is a intergalactic currency converter to be used for all species</description>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<configuration>
+						<archive>
+							<manifest>
+								<mainClass>com.xtrader.nebulae.converter</mainClass>
+							</manifest>
+						</archive>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
